Updated logo and fixed username not showing. Started on form validation.

--- a/src/main/design/css/basic-styles.scss
+++ b/src/main/design/css/basic-styles.scss
@@ -43,7 +43,7 @@ header {
     text-decoration: none;
 
     @media (max-width: 767px) {
-      text-indent: -279px;
+      text-indent: -371px;
       overflow: hidden;
       width: 100px;
 
